cmake_minimum_required(VERSION 3.23)
project(LeetcodeCC)

set(CMAKE_CXX_STANDARD 14)

include_directories("common")
add_executable(O0003 offer/O0003.cpp)
add_executable(O0005 offer/O0005.cpp)
add_executable(O0015 offer/O0015.cpp)
add_executable(O0017 offer/O0017.cpp)
add_executable(O0022 offer/O0022.cpp)
add_executable(O0027 offer/O0027.cpp)
add_executable(O0039 offer/O0039.cpp)
add_executable(O0052 offer/O0052.cpp)
add_executable(O0054 offer/O0054.cpp)
add_executable(O0055I offer/O0055I.cpp)
add_executable(O0056II offer/O0056II.cpp)
add_executable(O0057 offer/O0057.cpp)
add_executable(O0058II offer/O0058II.cpp)
add_executable(O0064 offer/O0064.cpp)
add_executable(OII0002 offer/OII0002.cpp)
add_executable(OII0003 offer/OII0003.cpp)
add_executable(OII0004 offer/OII0004.cpp)
add_executable(OII0005 offer/OII0005.cpp)
add_executable(OII0023 offer/OII0023.cpp)
add_executable(OII0025 offer/OII0025.cpp)
add_executable(OII0042 offer/OII0042.cpp)
add_executable(OII0045 offer/OII0045.cpp)
add_executable(OII0054 offer/OII0054.cpp)
add_executable(OII0055 offer/OII0055.cpp)
add_executable(OII0069 offer/OII0069.cpp)
add_executable(OII0098 offer/OII0098.cpp)
add_executable(P0001 algorithm/P0001.cpp)
add_executable(P0002 algorithm/P0002.cpp)
add_executable(P0009 algorithm/P0009.cpp)
add_executable(P0062 algorithm/P0062.cpp)
add_executable(P0066 algorithm/P0066.cpp)
add_executable(P0067 algorithm/P0067.cpp)
add_executable(P0094 algorithm/P0094.cpp)
add_executable(P0100 algorithm/P0100.cpp)
add_executable(P0101 algorithm/P0101.cpp)
add_executable(P0104 algorithm/P0104.cpp)
add_executable(P0108 algorithm/P0108.cpp)
add_executable(P0110 algorithm/P0110.cpp)
add_executable(P0111 algorithm/P0111.cpp)
add_executable(P0136 algorithm/P0136.cpp)
add_executable(P0137 algorithm/P0137.cpp)
add_executable(P0144 algorithm/P0144.cpp)
add_executable(P0145 algorithm/P0145.cpp)
add_executable(P0160 algorithm/P0160.cpp)
add_executable(P0169 algorithm/P0169.cpp)
add_executable(P0190 algorithm/P0190.cpp)
add_executable(P0191 algorithm/P0191.cpp)
add_executable(P0226 algorithm/P0226.cpp)
add_executable(P0237 algorithm/P0237.cpp)
add_executable(P0242 algorithm/P0242.cpp)
add_executable(P0258 algorithm/P0258.cpp)
add_executable(P0268 algorithm/P0268.cpp)
add_executable(P0292 algorithm/P0292.cpp)
add_executable(P0318 algorithm/P0318.cpp)
add_executable(P0338 algorithm/P0338.cpp)
add_executable(P0344 algorithm/P0344.cpp)
add_executable(P0349 algorithm/P0349.cpp)
add_executable(P0389 algorithm/P0389.cpp)
add_executable(P0412 algorithm/P0412.cpp)
add_executable(P0415 algorithm/P0415.cpp)
add_executable(P0442 algorithm/P0442.cpp)
add_executable(P0448 algorithm/P0448.cpp)
add_executable(P0461 algorithm/P0461.cpp)
add_executable(P0476 algorithm/P0476.cpp)
add_executable(P0500 algorithm/P0500.cpp)
add_executable(P0509 algorithm/P0509.cpp)
add_executable(P0538 algorithm/P0538.cpp)
add_executable(P0559 algorithm/P0559.cpp)
add_executable(P0561 algorithm/P0561.cpp)
add_executable(P0589 algorithm/P0589.cpp)
add_executable(P0590 algorithm/P0590.cpp)
add_executable(P0598 algorithm/P0598.cpp)
add_executable(P0617 algorithm/P0617.cpp)
add_executable(P0654 algorithm/P0654.cpp)
add_executable(P0657 algorithm/P0657.cpp)
add_executable(P0700 algorithm/P0700.cpp)
add_executable(P0709 algorithm/P0709.cpp)
add_executable(P0728 algorithm/P0728.cpp)
add_executable(P0762 algorithm/P0762.cpp)
add_executable(P0766 algorithm/P0766.cpp)
add_executable(P0771 algorithm/P0771.cpp)
add_executable(P0804 algorithm/P0804.cpp)
add_executable(P0807 algorithm/P0807.cpp)
add_executable(P0832 algorithm/P0832.cpp)
add_executable(P0852 algorithm/P0852.cpp)
add_executable(P0867 algorithm/P0867.cpp)
add_executable(P0876 algorithm/P0876.cpp)
add_executable(P0933 algorithm/P0933.cpp)
add_executable(P0938 algorithm/P0938.cpp)
add_executable(P0942 algorithm/P0942.cpp)
add_executable(P0961 algorithm/P0961.cpp)
add_executable(P0965 algorithm/P0965.cpp)
add_executable(P0977 algorithm/P0977.cpp)
add_executable(P1021 algorithm/P1021.cpp)
add_executable(P1038 algorithm/P1038.cpp)
add_executable(P1046 algorithm/P1046.cpp)
add_executable(P1047 algorithm/P1047.cpp)
add_executable(P1051 algorithm/P1051.cpp)
add_executable(P1078 algorithm/P1078.cpp)
add_executable(P1108 algorithm/P1108.cpp)
add_executable(P1160 algorithm/P1160.cpp)
add_executable(P1189 algorithm/P1189.cpp)
add_executable(P1200 algorithm/P1200.cpp)
add_executable(P1207 algorithm/P1207.cpp)
add_executable(P1221 algorithm/P1221.cpp)
add_executable(P1252 algorithm/P1252.cpp)
add_executable(P1266 algorithm/P1266.cpp)
add_executable(P1281 algorithm/P1281.cpp)
add_executable(P1290 algorithm/P1290.cpp)
add_executable(P1295 algorithm/P1295.cpp)
add_executable(P1299 algorithm/P1299.cpp)
add_executable(P1302 algorithm/P1302.cpp)
add_executable(P1304 algorithm/P1304.cpp)
add_executable(P1305 algorithm/P1305.cpp)
add_executable(P1309 algorithm/P1309.cpp)
add_executable(P1313 algorithm/P1313.cpp)
add_executable(P1323 algorithm/P1323.cpp)
add_executable(P1332 algorithm/P1332.cpp)
add_executable(P1342 algorithm/P1342.cpp)
add_executable(P1365 algorithm/P1365.cpp)
add_executable(P1370 algorithm/P1370.cpp)
add_executable(P1374 algorithm/P1374.cpp)
add_executable(P1380 algorithm/P1380.cpp)
add_executable(P1394 algorithm/P1394.cpp)
add_executable(P1398 algorithm/P1398.cpp)
add_executable(P1408 algorithm/P1408.cpp)
add_executable(P1431 algorithm/P1431.cpp)
add_executable(P1436 algorithm/P1436.cpp)
add_executable(P1450 algorithm/P1450.cpp)
add_executable(P1460 algorithm/P1460.cpp)
add_executable(P1464 algorithm/P1464.cpp)
add_executable(P1470 algorithm/P1470.cpp)
add_executable(P1480 algorithm/P1480.cpp)
add_executable(P1486 algorithm/P1486.cpp)
add_executable(P1502 algorithm/P1502.cpp)
add_executable(P1512 algorithm/P1512.cpp)
add_executable(P1528 algorithm/P1528.cpp)
add_executable(P1534 algorithm/P1534.cpp)
add_executable(P1550 algorithm/P1550.cpp)
add_executable(P1551 algorithm/P1551.cpp)
add_executable(P1557 algorithm/P1557.cpp)
add_executable(P1572 algorithm/P1572.cpp)
add_executable(P1588 algorithm/P1588.cpp)
add_executable(P1598 algorithm/P1598.cpp)
add_executable(P1603 algorithm/P1603.cpp)
add_executable(P1614 algorithm/P1614.cpp)
add_executable(P1619 algorithm/P1619.cpp)
add_executable(P1656 algorithm/P1656.cpp)
add_executable(P1662 algorithm/P1662.cpp)
add_executable(P1672 algorithm/P1672.cpp)
add_executable(P1678 algorithm/P1678.cpp)
add_executable(P1684 algorithm/P1684.cpp)
add_executable(P1688 algorithm/P1688.cpp)
add_executable(P1689 algorithm/P1689.cpp)
add_executable(P1704 algorithm/P1704.cpp)
add_executable(P1716 algorithm/P1716.cpp)
add_executable(P1720 algorithm/P1720.cpp)
add_executable(P1725 algorithm/P1725.cpp)
add_executable(P1732 algorithm/P1732.cpp)
add_executable(P1748 algorithm/P1748.cpp)
add_executable(P1768 algorithm/P1768.cpp)
add_executable(P1773 algorithm/P1773.cpp)
add_executable(P1791 algorithm/P1791.cpp)
add_executable(P1812 algorithm/P1812.cpp)
add_executable(P1822 algorithm/P1822.cpp)
add_executable(P1827 algorithm/P1827.cpp)
add_executable(P1828 algorithm/P1828.cpp)
add_executable(P1832 algorithm/P1832.cpp)
add_executable(P1837 algorithm/P1837.cpp)
add_executable(P1844 algorithm/P1844.cpp)
add_executable(P1854 algorithm/P1854.cpp)
add_executable(P1877 algorithm/P1877.cpp)
add_executable(P1880 algorithm/P1880.cpp)
add_executable(P1913 algorithm/P1913.cpp)
add_executable(P1920 algorithm/P1920.cpp)
add_executable(P1925 algorithm/P1925.cpp)
add_executable(P1967 algorithm/P1967.cpp)
add_executable(P1979 algorithm/P1979.cpp)
add_executable(P2000 algorithm/P2000.cpp)
add_executable(P2006 algorithm/P2006.cpp)
add_executable(P2032 algorithm/P2032.cpp)
add_executable(P2037 algorithm/P2037.cpp)
add_executable(P2053 algorithm/P2053.cpp)
add_executable(P2057 algorithm/P2057.cpp)
add_executable(P2068 algorithm/P2068.cpp)
add_executable(P2085 algorithm/P2085.cpp)
add_executable(P2089 algorithm/P2089.cpp)
add_executable(P2103 algorithm/P2103.cpp)
add_executable(P2108 algorithm/P2108.cpp)
add_executable(P2114 algorithm/P2114.cpp)
add_executable(P2119 algorithm/P2119.cpp)
add_executable(P2124 algorithm/P2124.cpp)
add_executable(P2125 algorithm/P2125.cpp)
add_executable(P2130 algorithm/P2130.cpp)
add_executable(P2160 algorithm/P2160.cpp)
add_executable(P2169 algorithm/P2169.cpp)
add_executable(P2176 algorithm/P2176.cpp)
add_executable(P2180 algorithm/P2180.cpp)
add_executable(P2185 algorithm/P2185.cpp)
add_executable(P2194 algorithm/P2194.cpp)
add_executable(P2215 algorithm/P2215.cpp)
add_executable(P2220 algorithm/P2220.cpp)
add_executable(P2221 algorithm/P2221.cpp)
add_executable(P2224 algorithm/P2224.cpp)
add_executable(P2236 algorithm/P2236.cpp)
add_executable(P2255 algorithm/P2255.cpp)
add_executable(P2278 algorithm/P2278.cpp)
add_executable(P2283 algorithm/P2283.cpp)
add_executable(P2315 algorithm/P2315.cpp)
add_executable(P2319 algorithm/P2319.cpp)
add_executable(P2325 algorithm/P2325.cpp)
add_executable(P2331 algorithm/P2331.cpp)
add_executable(P2341 algorithm/P2341.cpp)
add_executable(P2351 algorithm/P2351.cpp)
add_executable(P2357 algorithm/P2357.cpp)
add_executable(P2363 algorithm/P2363.cpp)
add_executable(P2367 algorithm/P2367.cpp)
add_executable(P2373 algorithm/P2373.cpp)
add_executable(P2390 algorithm/P2390.cpp)
add_executable(P2391 algorithm/P2391.cpp)
add_executable(P2413 algorithm/P2413.cpp)
add_executable(P2427 algorithm/P2427.cpp)